@@ -1,3 +1,6 @@
+[CW25]
+* Rename MakeMeFeelGood request => GenericRequest.
+
 [CW24]
 + ModuleTest: add the ability to set custom JSON messages for requests in XML test.
 + ModuleTest: add invalidJSON attribute to request tags to produce invalid JSON sent to the core.
